# keyboard-music

./: .gitignore  Cargo.toml  README.md  justfile  main.c
.github/workflows/: release.yml
keymaps/: piano.json  us.json
src/: keymap.rs  keymaps.rs  main.rs  notes.rs  stream.rs
src/vis/: fragment.glsl  mod.rs  renderer.rs  vertex.vert
src/wave/: mod.rs  phase.rs  sawtooth.rs  sine.rs  square.rs  triangle.rs
