[package]
name = "keyboard-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
cpal = "0.15.2"
device_query = "1.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[profile.release]
# Reducing binary size, see https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"
